--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="background">
         <div class="bacgrpund-color"></div>
         <div class="header-box">
-          <h3>Zetta Hotels</h3>
+          <h3 class="header-head">Zetta Hotels</h3>
           <nav class="navigation">
             <ul class="navul">
               <li class="navli active">Home</li>
@@ -51,37 +51,36 @@
     </section>
     <section>
       <div class="section1-conteiner">
-        <div class="conteiner-box1">
-          <p class="section1-text">Contact</p>
-          <p class="section1-text1">Contact us to get free support</p>
+        <div class="conteiner-wrap">
+          <div class="conteiner-box">
+            <p class="section1-text">Contact</p>
+            <p class="section1-text1">Contact us to get free support</p>
+          </div>
         </div>
+        <form class="form-box" action="#">
         <div class="section1-conteiner1">
-            <div class="form-conteiner">
-          <label for="desciption"></label>
-            <textarea
-              name="text"
-              id="description"
-              placeholder="description"
-            ></textarea>
-        </div>
-        <div class="section1-conteiner2">
-            <form action="#"></form>
-          <div class="form">
-            <label for="subject"></label>
-            <input type="text" id="subject" name="username" placeholder="Subject" required/>
+          <label for="description"></label>
+              <textarea name="text" id="description" placeholder="description" required></textarea>
+              
+          <div class="section1-conteiner2">
+            <div class="form">
+              <label for="subject"></label>
+              <input type="text" id="subject" name="username" placeholder="Subject" required/>
+            </div>
+            <div class="form">
+              <label for="name"></label>
+              <input type="text" id="name" name="surname" placeholder="Name / surname" required/>
+            </div>
+            <div class="form">
+              <label for="mail"></label>
+              <input type="email" id="mail" name="email" placeholder="Email" required/>
+            </div>
+            <div class="form but">
+                <button type="submit" value="submit">Send <i class="far fa-paper-plane"></i></button>
+            </div>
           </div>
-          <div class="form">
-            <label for="name"></label>
-            <input type="text" id="name" name="surname" placeholder="Name / surname" required/>
           </div>
-          <div class="form">
-            <label for="mail"></label>
-            <input type="email" id="mail" name="email" placeholder="Email" required/>
-          </div class="form">
-          <div class="form but">
-              <button type="submit">Send <i class="far fa-paper-plane"></i></button>
-          </div>
-        </div>
+        </form>
       </div>
       <div class="conteiner-wraper">
           <div class="wraper-box">
@@ -117,5 +116,51 @@
             </div>
             </div>
     </section>
+    <footer>
+      <div class="footer-conteiner">
+       <div class="footer-box">
+         <h4 class="box-head">Zetta Hotels</h4>
+         <p class="box-text">Our hotel is an image of quality and profesionalism combined with hard work and precision. You can expect only the best services from our staff.</p>
+         <div class="icon">
+         <div class="facebook"><i class="fab fa-facebook-f"></i></div>
+         <div class="twitter"><i class="fab fa-twitter"></i></div>
+         <div class="gmail"><i class="fab fa-google-plus-g"></i></div>
+        </div>
+       </div>
+       <div class="footer-box2">
+         <h4 class="box-head2">Useful links</h4>
+         <a class="footer-link" href="#">Blog</a>
+         <a class="footer-link" href="#">Rooms</a>
+         <a class="footer-link" href="#">Gift Card</a>
+         <a class="footer-link" href="#">Testimonials</a>
+       </div>
+       <div class="footer-box2">
+        <h4 class="box-head2">Privacy</h4>
+        <a class="footer-link" href="#">Career</a>
+        <a class="footer-link" href="#">About Us</a>
+        <a class="footer-link" href="#">Contact Us</a>
+        <a class="footer-link" href="#">Services</a>
+       </div>
+       <div class="footer-box2 last">
+        <h4 class="box-head2">Contact Info</h4>
+        <div class="footer-wraper">
+        <a class="footer-link" href="#"><i class="far fa-envelope"></i></a>
+        <p class="text1">example@yahoo.com</p>
+      </div>  
+      <div class="footer-wraper">
+        <a class="footer-link" href="#"><i class="fas fa-phone-alt"></i></a>
+        <p class="text1">+0 320 422 4254</p>
+      </div>
+      <div class="footer-wraper">
+        <a class="footer-link" href="#"><i class="fas fa-map-marker-alt"></i></a>
+        <p class="text1">Main Str Chicago Ilinois</p>
+      </div>
+       </div>
+       <div class="footer-bottom">
+        <p class="box-text">Copyright ©2020 All rights reserved | This template is made with love by <span class="footer-link">Marian</span></p>
+        <a class="footer-link" href="#">www.portfolioname.com</a>
+      </div>
+      </div>
+    </footer>
   </body>
 </html>
