--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <li class="navli">contact</li>
             </ul>
           </nav>
+          <div class="burger"><i class="fas fa-bars"></i></div>
           <div class="header-box2">
             <h2 class="head2">Contact</h2>
             <div class="boxinbox">
@@ -59,9 +60,10 @@
         </div>
         <form class="form-box" action="#">
         <div class="section1-conteiner1">
+          <div>
           <label for="description"></label>
               <textarea name="text" id="description" placeholder="description" required></textarea>
-              
+            </div>
           <div class="section1-conteiner2">
             <div class="form">
               <label for="subject"></label>
@@ -104,16 +106,18 @@
       </div>
     </section>
     <section>
-        <div class="section2-conteiner">
-            <div class="conteiner-box1">
+        <div class="section1-conteiner">
+          <div class="conteiner-wrap">
+            <div class="conteiner-box">
               <p class="section1-text">Photos</p>
               <p class="section1-text1">See our latest photos from restaurant and hotel</p>
             </div>
+          </div>
+          </div>
             <div class="image-conteiner">
                 <img src="images/foto.jpg" alt="beach">
                 <img src="images/foto1.jpg" alt="mountain">
                 <img src="images/foto2.jpg" alt="restourant">
-            </div>
             </div>
     </section>
     <footer>
