--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact-Fotms</title>
-    <script src="https://kit.fontawesome.com/a616076c0b.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a616076c0b.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
@@ -59,111 +62,147 @@
           </div>
         </div>
         <form class="form-box" action="#">
-        <div class="section1-conteiner1">
-          <div>
-          <label for="description"></label>
-              <textarea name="text" id="description" placeholder="description" required></textarea>
+          <div class="section1-conteiner1">
+            <div>
+              <label for="description"></label>
+              <textarea
+                name="text"
+                id="description"
+                placeholder="description"
+                required
+              ></textarea>
             </div>
-          <div class="section1-conteiner2">
-            <div class="form">
-              <label for="subject"></label>
-              <input type="text" id="subject" name="username" placeholder="Subject" required/>
+            <div class="section1-conteiner2">
+              <div class="form">
+                <label for="subject"></label>
+                <input
+                  type="text"
+                  id="subject"
+                  name="username"
+                  placeholder="Subject"
+                  required
+                />
+              </div>
+              <div class="form">
+                <label for="name"></label>
+                <input
+                  type="text"
+                  id="name"
+                  name="surname"
+                  placeholder="Name / surname"
+                  required
+                />
+              </div>
+              <div class="form">
+                <label for="mail"></label>
+                <input
+                  type="email"
+                  id="mail"
+                  name="email"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <div class="form but">
+                <button type="submit" value="submit">
+                  Send <i class="far fa-paper-plane"></i>
+                </button>
+              </div>
             </div>
-            <div class="form">
-              <label for="name"></label>
-              <input type="text" id="name" name="surname" placeholder="Name / surname" required/>
-            </div>
-            <div class="form">
-              <label for="mail"></label>
-              <input type="email" id="mail" name="email" placeholder="Email" required/>
-            </div>
-            <div class="form but">
-                <button type="submit" value="submit">Send <i class="far fa-paper-plane"></i></button>
-            </div>
-          </div>
           </div>
         </form>
       </div>
       <div class="conteiner-wraper">
-          <div class="wraper-box">
-              <div class="circle"><i class="far fa-envelope"></i></div>
-              <h3 class="wraper-head">Email</h3>
-              <p>example@yahoo.com</p>
-              <p>exampleemail2@yahoo.com</p>
-          </div>
-          <div class="wraper-box">
-            <div class="circle"><i class="fas fa-phone-alt"></i></div>
-            <h3 class="wraper-head">Phone</h3>
-            <p>+0 320 422 4254</p>
-            <p>+0 342 552 523</p>
+        <div class="wraper-box">
+          <div class="circle"><i class="far fa-envelope"></i></div>
+          <h3 class="wraper-head">Email</h3>
+          <p>example@yahoo.com</p>
+          <p>exampleemail2@yahoo.com</p>
         </div>
         <div class="wraper-box">
-            <div class="circle"><i class="fas fa-map-marker-alt"></i></div>
-            <h3 class="wraper-head">Location</h3>
-            <p>Main Str Chicago Ilinois</p>
-            <p>Main Street New York City</p>
+          <div class="circle"><i class="fas fa-phone-alt"></i></div>
+          <h3 class="wraper-head">Phone</h3>
+          <p>+0 320 422 4254</p>
+          <p>+0 342 552 523</p>
+        </div>
+        <div class="wraper-box">
+          <div class="circle"><i class="fas fa-map-marker-alt"></i></div>
+          <h3 class="wraper-head">Location</h3>
+          <p>Main Str Chicago Ilinois</p>
+          <p>Main Street New York City</p>
         </div>
       </div>
     </section>
     <section>
-        <div class="section1-conteiner">
-          <div class="conteiner-wrap">
-            <div class="conteiner-box">
-              <p class="section1-text">Photos</p>
-              <p class="section1-text1">See our latest photos from restaurant and hotel</p>
-            </div>
+      <div class="section1-conteiner">
+        <div class="conteiner-wrap">
+          <div class="conteiner-box">
+            <p class="section1-text">Photos</p>
+            <p class="section1-text1">
+              See our latest photos from restaurant and hotel
+            </p>
           </div>
-          </div>
-            <div class="image-conteiner">
-                <img src="images/foto.jpg" alt="beach">
-                <img src="images/foto1.jpg" alt="mountain">
-                <img src="images/foto2.jpg" alt="restourant">
-            </div>
+        </div>
+      </div>
+      <div class="image-conteiner">
+        <img src="images/foto.jpg" alt="beach" />
+        <img src="images/foto1.jpg" alt="mountain" />
+        <img src="images/foto2.jpg" alt="restourant" />
+      </div>
     </section>
     <footer>
       <div class="footer-conteiner">
-       <div class="footer-box">
-         <h4 class="box-head">Zetta Hotels</h4>
-         <p class="box-text">Our hotel is an image of quality and profesionalism combined with hard work and precision. You can expect only the best services from our staff.</p>
-         <div class="icon">
-         <div class="facebook"><i class="fab fa-facebook-f"></i></div>
-         <div class="twitter"><i class="fab fa-twitter"></i></div>
-         <div class="gmail"><i class="fab fa-google-plus-g"></i></div>
+        <div class="footer-box">
+          <h4 class="box-head">Zetta Hotels</h4>
+          <p class="box-text">
+            Our hotel is an image of quality and profesionalism combined with
+            hard work and precision. You can expect only the best services from
+            our staff.
+          </p>
+          <div class="icon">
+            <div class="facebook"><i class="fab fa-facebook-f"></i></div>
+            <div class="twitter"><i class="fab fa-twitter"></i></div>
+            <div class="gmail"><i class="fab fa-google-plus-g"></i></div>
+          </div>
         </div>
-       </div>
-       <div class="footer-box2">
-         <h4 class="box-head2">Useful links</h4>
-         <a class="footer-link" href="#">Blog</a>
-         <a class="footer-link" href="#">Rooms</a>
-         <a class="footer-link" href="#">Gift Card</a>
-         <a class="footer-link" href="#">Testimonials</a>
-       </div>
-       <div class="footer-box2">
-        <h4 class="box-head2">Privacy</h4>
-        <a class="footer-link" href="#">Career</a>
-        <a class="footer-link" href="#">About Us</a>
-        <a class="footer-link" href="#">Contact Us</a>
-        <a class="footer-link" href="#">Services</a>
-       </div>
-       <div class="footer-box2 last">
-        <h4 class="box-head2">Contact Info</h4>
-        <div class="footer-wraper">
-        <a class="footer-link" href="#"><i class="far fa-envelope"></i></a>
-        <p class="text1">example@yahoo.com</p>
-      </div>  
-      <div class="footer-wraper">
-        <a class="footer-link" href="#"><i class="fas fa-phone-alt"></i></a>
-        <p class="text1">+0 320 422 4254</p>
-      </div>
-      <div class="footer-wraper">
-        <a class="footer-link" href="#"><i class="fas fa-map-marker-alt"></i></a>
-        <p class="text1">Main Str Chicago Ilinois</p>
-      </div>
-       </div>
-       <div class="footer-bottom">
-        <p class="box-text">Copyright ©2020 All rights reserved | This template is made with love by <span class="footer-link">Marian</span></p>
-        <a class="footer-link" href="#">www.portfolioname.com</a>
-      </div>
+        <div class="footer-box2">
+          <h4 class="box-head2">Useful links</h4>
+          <a class="footer-link" href="#">Blog</a>
+          <a class="footer-link" href="#">Rooms</a>
+          <a class="footer-link" href="#">Gift Card</a>
+          <a class="footer-link" href="#">Testimonials</a>
+        </div>
+        <div class="footer-box2">
+          <h4 class="box-head2">Privacy</h4>
+          <a class="footer-link" href="#">Career</a>
+          <a class="footer-link" href="#">About Us</a>
+          <a class="footer-link" href="#">Contact Us</a>
+          <a class="footer-link" href="#">Services</a>
+        </div>
+        <div class="footer-box2 last">
+          <h4 class="box-head2">Contact Info</h4>
+          <div class="footer-wraper">
+            <a class="footer-link" href="#"><i class="far fa-envelope"></i></a>
+            <p class="text1">example@yahoo.com</p>
+          </div>
+          <div class="footer-wraper">
+            <a class="footer-link" href="#"><i class="fas fa-phone-alt"></i></a>
+            <p class="text1">+0 320 422 4254</p>
+          </div>
+          <div class="footer-wraper">
+            <a class="footer-link" href="#"
+              ><i class="fas fa-map-marker-alt"></i
+            ></a>
+            <p class="text1">Main Str Chicago Ilinois</p>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p class="box-text">
+            Copyright ©2020 All rights reserved | This template is made with
+            love by <span class="footer-link">Marian</span>
+          </p>
+          <a class="footer-link" href="#">www.portfolioname.com</a>
+        </div>
       </div>
     </footer>
   </body>
